Fixed problem with slide's gallery (forgot to hide overflow)

--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,7 @@ section {
   margin: 0 auto;
   /* this is important, since absolute elements do no take any space */
   height: 350px;
+  overflow: hidden;
 }
 
 .slide {
@@ -146,6 +147,9 @@ section {
   width: 100%;
   height: 85%;
   transition: transform 0.6s ease-in-out;
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
 }
 
 .slide.hobbies {
@@ -197,22 +201,22 @@ section {
 
 .slider__btn {
   position: absolute;
-  top: 40%;
+  top: 92%;
   z-index: 1;
   background-color: var(--slider-btn-background-color);
   color: whitesmoke;
-  font-size: 30px;
+  font-size: 16px;
   padding: 10px;
   cursor: pointer;
 }
 
 .slider__btn--left {
-  transform: translate(-50%, -50%);
+  transform: translate(100%, -50%);
   left: -5%;
 }
 
 .slider__btn--right {
-  transform: translate(50%, -50%);
+  transform: translate(-100%, -50%);
   right: -5%;
 }
 
@@ -326,7 +330,7 @@ footer {
 
   .slider__btn {
     font-size: 20px;
-    top: 35%;
+    top: 80%;
   }
 
   .dots {
